# osm2go

./: .codecov.yaml  .editorconfig  .gitattributes  .gitignore  .lgtm.yml  .travis.yml  CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake  ChangeLog  INSTALL.md  Makefile  Makefile.in  Makefile.maemo  Messages.sh  aclocal.m4  build_release-N900.sh  configure  configure.ac  configure.in  crowdin.yml  ctest_osm2go.cmake  filesystem.hxx.in  find_filesystem.cmake  find_optional.cmake  josm-presets.md  lgtm.yml  mktarball.sh  o2g_diff  optional.hxx.in  readme.md  readme.txt  todo.txt  version.mk
.github/workflows/: ccpp.yml
data/: CMakeLists.txt  Makefile  Makefile.in  Makefile.maemo  compose-elemstyles.pl  de  defaultpresets.xml  discarded.py  elemstyles-mapnik.pl  elemstyles-mapnik.xml  elemstyles-mapnik.xml.in  elemstyles-potlatch.xml  elemstyles.xml  fr  josm.style  josm_wireframe.style  mapnik.style  osm2go-ubuntu.desktop  osm2go.1  osm2go.conf  osm2go.desktop  potlatch.style  presets.xml  ru  update_josm_presets.sh
data/demo/: demo.osm  demo.proj
data/icons/: josm_import.sh
data/icons/presets/: scale_24x24.sh
debian/: changelog  control  control.in  parse-changelog  postinst  rules
src/: CMakeLists.txt  Makefile  Makefile.in  Makefile.maemo  SaxParser.h  about.c  about.cpp  about.h  api_limits.cpp  api_limits.h  appdata.h  area_edit.c  area_edit.cpp  area_edit.h  banner.c  banner.cpp  banner.h  cache_set.h  canvas.c  canvas.cpp  canvas.h  canvas_gnomecanvas.c  canvas_goocanvas.c  canvas_goocanvas.cpp  canvas_p.h  color.h  config.h  converter.c  dbus.c  dbus.h  diff.c  diff.cpp  diff.h  discarded.h  fdguard.cpp  fdguard.h  gconf_clear.sh  gps.c  gps.cpp  gps.h  (+112 more)
src/osm-gps-map/: CMakeLists.txt  config.h  converter.c  converter.h  osm-gps-map-osd-select.c  osm-gps-map-source.h  osm-gps-map-types.h  osm-gps-map-widget.h  osm-gps-map.c  osm-gps-map.h
test/: CMakeLists.txt  Makefile  api_limits.cpp  api_limits_20220227.xml  api_limits_crazy.xml  appdata_dummy.h  canvas_base.cpp  canvas_points.cpp  diff.diff  diff.osm  diff_restore.cpp  dummy_map.h  empty_proj.proj  fdguard.cpp  fremantle_popup.c  fremantle_submenu.c  i18n.cpp  map_items.cpp  multi.gpx  net_io.cpp  osm_api_download.cpp  osm_edit.cpp  osm_load.cpp  osm_names.cpp  osm_way_length.c  osm_way_length.cpp  presets_classes.cpp  presets_items.cpp  presets_load.c  presets_load.cpp  project.cpp  settings.cpp  statusbar_bg  statusbar_bg.c  style_apply.cpp  style_apply_mapnik.cpp  style_load.cpp  suppression-dummy.cpp  test1.style.in  test1.trk  (+7 more)
test/diff_restore/: diff_restore.diff  diff_restore.osm  diff_restore.osmchange.in
test/diff_restore_data/: diff_restore_data.diff  diff_restore_data.osm  diff_restore_data.osmchange.in
test/presets/osm2go/presets/osm2go/: tests.xml
